--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "meta-diagram",
-  "author": "afonso",
+  "name": "@metacell/meta-diagram",
+  "author": "metacell",
   "module": "dist/meta-diagram.esm.js",
   "size-limit": [
     {
