--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "tsdx build"
   },
   "peerDependencies": {
     "react": ">=16"
