--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,24 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - uses: actions/setup-node@v1
+
+        - name: Check version changes
+          uses: EndBug/version-check@v1
+          id: check
+
+        - name: Set up Node.js for NPM
+          if: steps.check.outputs.changed == 'true'
+          uses: actions/setup-node@v1
           with:
             node-version: 14
-        - run: npm publish --access public
+            registry-url: "https://registry.npmjs.org"
+
+        - name: Install dependencies
+          if: steps.check.outputs.changed == 'true'
+          run: npm install --only=prod
+
+        - name: Publish package to NPM
+          if: steps.check.outputs.changed == 'true'
+          run: npm publish --access public
           env:
             NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
