--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "react-app-polyfill": "^1.0.0"
   },
   "alias": {
