--- a/package.json
+++ b/package.json
@@ -45,18 +45,29 @@
     }
   ],
   "devDependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.8.1",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "dagre": "^0.8.5",
     "husky": "^8.0.1",
+    "paths-js": "^0.4.11",
+    "pathfinding": "^0.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "size-limit": "^7.0.8",
+    "resize-observer-polyfill": "^1.5.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
+  },
+  "dependencies": {
+    "@emotion/styled": "^11.9.3",
+    "@projectstorm/react-canvas-core": "^6.7.4",
+    "@projectstorm/react-diagrams": "^6.7.4"
   }
 }
