--- a/package.json
+++ b/package.json
@@ -75,19 +75,7 @@
     "@material-ui/core": "^4.12.4",
     "@projectstorm/react-canvas-core": "^6.7.4",
     "@projectstorm/react-diagrams": "^6.7.4",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@rollup/plugin-url": "^7.0.0",
-    "@svgr/core": "^6.2.1",
-    "@svgr/rollup": "^6.2.1",
     "assets": "^3.0.1",
-    "file-loader": "^6.2.0",
-    "react-inlinesvg": "^3.0.0",
-    "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-svg": "^2.0.0"
   }
 }
