--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,15 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "react": "^16.8.0 || ^17.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
+    "@mui/styles": "^5.8.4",
     "react-app-polyfill": "^1.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": "^18.2.0"
+    "react-is": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "alias": {
     "react": "../node_modules/react",
