--- a/example/package.json
+++ b/example/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@metacell/meta-diagram": "file:.yalc/@metacell/meta-diagram",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@mui/styles": "^5.8.4",
-    "react-app-polyfill": "^1.0.0",
-    "react-is": "^18.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-app-polyfill": "^1.0.0",
+    "react-dom": "^17.0.2",
+    "react-is": "^18.2.0"
   },
   "alias": {
     "react": "../node_modules/react",
