--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.11",
     "react": "^17.0.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "size-limit": "^7.0.8",
