--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
     "noEmit": true,
-    "target": "es6",
+    "target": "ES2021",
   }
 }
